[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Volume.gd" type="Script" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]
[ext_resource path="res://Label.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 344.0
color = Color( 0, 0, 0, 1 )

[node name="Play" type="Button" parent="."]
margin_left = 192.0
margin_top = 368.0
margin_right = 273.0
margin_bottom = 388.0
text = "Play/Pause"

[node name="Stop" type="Button" parent="."]
margin_left = 280.0
margin_top = 368.0
margin_right = 320.0
margin_bottom = 388.0
text = "Stop"

[node name="Button" type="Button" parent="."]
margin_left = 328.0
margin_top = 368.0
margin_right = 372.0
margin_bottom = 388.0
text = "open"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 20.0
margin_top = 63.0
margin_right = 563.0
margin_bottom = 327.0
popup_exclusive = true
window_title = "Открыть файл"
mode = 0
access = 2
filters = PoolStringArray( "*.mp3" )

[node name="Volume" type="HSlider" parent="."]
margin_left = 408.0
margin_top = 368.0
margin_right = 584.0
margin_bottom = 392.0
min_value = -60.0
max_value = 0.0
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Spectrum"

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 370.0
margin_right = 72.0
margin_bottom = 384.0
text = "00:00:00"
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 352.0
script = ExtResource( 3 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="drag_ended" from="Volume" to="Volume" method="_on_Volume_drag_ended"]
[connection signal="drag_started" from="Volume" to="Volume" method="_on_Volume_drag_started"]
